--- a/css/style.css
+++ b/css/style.css
@@ -112,12 +112,12 @@ img {
   font-size: 15px;
   line-height: 20px;
   color: inherit;
-  height: 320px;
+  min-height: 320px;
   background: linear-gradient(180deg, var(--basic-white) 20px, var(--background-yellow) 20px);
 }
 
 .main-navigation-inner-page {
-  height: 206px;
+  min-height: 206px;
 }
 
 .header-site-navigation {
@@ -2213,7 +2213,7 @@ input[type="search"]:focus~.search-button::after {
 /* Item Button */
 
 .item-buttons {
-  display: none;
+  opacity: 0;
   position: absolute;
   text-align: center;
   top: 170px;
@@ -2324,16 +2324,13 @@ input[type="search"]:focus~.search-button::after {
 }
 
 .item-img-wrapper:hover+.item-buttons {
-  display: block;
-}
+	opacity: 1;
+ }
 
-.item-buttons:hover {
-  display: block;
-}
-
-.catalog-item:focus-within .item-buttons {
-  display: block;
-}
+ .item-buttons:hover,
+ .catalog-item:focus-within .item-buttons {
+	opacity: 1;
+ }
 
 /* New */
 
